<resources>
    <string name="app_name">Splinter Sell</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_item_details">Item details</string>
    <string name="menu_item_list">My Items</string>
    <string name="sign_out">Sign Out</string>
    <string name="map">Map</string>
    <string name="okay">OKAY</string>
    <string name="continue_">Continue</string>

    <string name="menu_on_sale">On sale</string>
    <string name="menu_follow_list">Wish List</string>
    <string name="menu_bought_list">Bought List</string>
    <string name="menu_edit_item">Edit Item</string>
    <string name="menu_show_profile">My Profile</string>
    <string name="logo">Logo</string>

    <string name="home_second">Home Second</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="detail_image">detail_image</string>
    <string name="price">Price</string>
    <string name="category">Main Category</string>
    <string name="show_category">Category</string>
    <string name="subcategory">Sub Category</string>
    <string name="location">Location</string>
    <string name="expire_date">Expire date</string>
    <string name="owner">Owner</string>
    <string name="comment">Comment</string>
    <string name="user">User</string>
    <string name="item">Item</string>
    <string name="rating">Please, express a rating</string>
    <string name="nick_not_available">"This nickname is not available"</string>

    <string name="edit">Edit</string>
    <string name="view_user">View User</string>
    <string name="show_users">Show Interested Users</string>
    <string name="empty_list">No items here</string>
    <string name="empty_list_users">No interested users</string>
    <string name="empty_list_feedbacks">No feedbacks received</string>
    <string name="remove">Remove</string>
    <string name="sold">sold</string>
    <string name="available">available</string>
    <string name="blocked">blocked</string>
    <string name="feedback">Feedback</string>

    //SHOW PROFILE
    <string name="full_name">Full Name</string>
    <string name="nick">Nickname</string>
    <string name="mail">email@address</string>
    <string name="location_show_profile">Location</string>
    <string name="profile_photo">profile_photo</string>
    <string name="select_image">Select image</string>
    <string name="open_camera">Open Camera</string>
    <string name="save">Save</string>
    <string name="update_profile_photo">update_profile_photo</string>
    <string name="add_photo">add_photo</string>
    <string name="search">Search</string>
    <string name="accept">Accept</string>
    <string name="filter">Filter</string>
    <string name="hidden_text">Hidden</string>
    <string name="please_fill">Please, fill this field!</string>
    <string name="please_fill_email">Please, specify a valid email!</string>
    <string name="please_fill_all">Please, fill all the fields!</string>
    <string name="please_select">Please, select an option</string>
    <string name="wrong_date">Please, select a date not yet elapsed</string>
    <string name="send">Send</string>

    <string-array name="macroCategories">

        <item>Arts &amp; Crafts</item>
        <item>Sports &amp; Hobby</item>
        <item>Baby</item>
        <item>Women\'s fashion</item>
        <item>Men\'s fashion</item>
        <item>Electronics</item>
        <item>Games &amp; Videogames</item>
        <item>Automotive</item>

    </string-array>

    <string-array name="arts">

        <item>Painting, Drawing &amp; Art Supplies</item>
        <item>Sewing</item>
        <item>Scapbooking &amp; Stamping</item>
        <item>Party Decoration &amp; Supplies</item>

    </string-array>

    <string-array name="sports">

        <item>Sports and Outdoors</item>
        <item>Outdoor Recreation</item>
        <item>Sports &amp; Fitness</item>
        <item>Pet Supplies</item>

    </string-array>

    <string-array name="baby">

        <item>Apparel &amp; Accessories</item>
        <item>Baby &amp; Toddler Toys</item>
        <item>Car Seats &amp; Accessories</item>
        <item>Pregnancy &amp; Maternity</item>
        <item>Strollers &amp; Accessories</item>

    </string-array>

    <string-array name="women">

        <item>Clothing</item>
        <item>Shoes</item>
        <item>Watches</item>
        <item>Handbags</item>
        <item>Accessories</item>

    </string-array>

    <string-array name="men">

        <item>Clothing</item>
        <item>Shoes</item>
        <item>Watches</item>
        <item>Accessories</item>

    </string-array>

    <string-array name="electronics">

        <item>Computers</item>
        <item>Monitors</item>
        <item>Printers &amp; Scanners</item>
        <item>Camera &amp; Photo</item>
        <item>Smartphone &amp; Tablet</item>
        <item>Audio</item>
        <item>Television &amp; Video</item>
        <item>VideoGame Consoles</item>
        <item>Wearable Technology</item>
        <item>Accessories &amp; Supplies</item>
        <item>Irons &amp; Steamers</item>
        <item>Vaccums &amp; Floor Care</item>

    </string-array>

    <string-array name="games">

        <item>Action Figures &amp; Statues</item>
        <item>Arts &amp; Crafts</item>
        <item>Building Toys</item>
        <item>Doll &amp; Accessories</item>
        <item>Kids\' Electronics</item>
        <item>Learning &amp; Education</item>
        <item>Tricycles, Scooters &amp; Wagons</item>
        <item>Videogames</item>

    </string-array>

    <string-array name="automotive">

        <item>Car Electronics &amp; Accessories</item>
        <item>Accessories</item>
        <item>Motorcycle &amp; Powersports</item>
        <item>Replacement Parts</item>
        <item>RV Parts &amp; Accessories</item>
        <item>Tools &amp; Equipment</item>


    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="continue_with">Continue with</string>
    <string name="powered_by_breadsticks">Powered by Breadsticks</string>
    <string name="advertisement_1">Fast and Simple</string>
    <string name="full_size_image">Fullsize image</string>
    <string name="image_button">image_button</string>
    <string name="fullscreen_image">fullscreen_image</string>
    <string name="select">select</string>
    <string name="reset">Reset</string>
    <string name="msg_token_fmt" />
    <string name="splinter_sell">SPLINTER SELL</string>
    <string name="all_you_re_looking_for">ALL YOU\'RE LOOKING FOR</string>

    <string name="transition_image">transition_image</string>
    <string name="transition_image_edit">transition_image_edit</string>
    <string name="transition_title">transition_title</string>
    <string name="transition_description">transition_description</string>
    <string name="transition_price">transition_price</string>
    <string name="select_photo_and_nickname">It\'s time for a nickname</string>
    <string name="choose_a_unique_nick_just_like_you">Choose a unique nick, just like you</string>
    <string name="welcome">Welcome!</string>
    <string name="you_re_almost_there">You\'re almost there</string>
    <string name="here_we_are">Here we are</string>
    <string name="label_rating">Rating</string>
    <string name="where_do_you_come_from">Where do you come from?</string>
    <string name="please_location">Please, provide us your location to offer you a fantastic experience!</string>
    <string name="edit_map">Edit Map</string>

</resources>
