<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/detail_view"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/detail_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:contentDescription="@string/detail_image"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:padding="10dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/category" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/location" />

        <TextView
            android:id="@+id/expire_date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/expire_date" />

    </LinearLayout>

</ScrollView>


