<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/edit_view"
    android:fillViewport="true"
    >


    <RelativeLayout
        android:id="@+id/edit_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/detail_image"
            android:paddingBottom="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/image_vectorized_lower"
            tools:srcCompat="@drawable/image_vectorized_lower" />

        <ImageButton
            android:id="@+id/select_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/detail_image"
            android:layout_alignEnd="@+id/detail_image"
            android:background="@drawable/round_corners"
            android:contentDescription="@string/add_photo"
            android:padding="10dp"
            android:src="@drawable/ic_photo_camera_white_24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/detail_image"
            android:layout_margin="10dp"
            android:background="@drawable/round_corners" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_image"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_image"
                android:autofillHints=""
                android:hint="@string/title"
                android:inputType="textAutoCorrect|textAutoComplete"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textSize="24sp" />



        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_title"
            android:layout_marginTop="10dp">


            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/description"
                android:inputType="textAutoCorrect|textAutoComplete"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="24sp" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_description"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="24sp"
                android:textStyle="bold" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/main_cat_label"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_price"
            android:text="Main Category"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/macrocategoryEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_cat_label"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/sec_cat_label"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/macrocategoryEdit"
            android:text="Secondary Category"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/categoryEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sec_cat_label"
            android:paddingBottom="10dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categoryEdit"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/location"
                android:inputType="textAutoCorrect|textAutoComplete|textPostalAddress"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="24sp" />



        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_expire_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_location"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/expire_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:focusable="false"
                android:hint="@string/expire_date"
                android:inputType="date"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="24sp" />



        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

</ScrollView>
